# invy

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md
scripts/: install.sh  release.sh
src/: cli.rs  db.rs  main.rs  model.rs  output.rs
src/commands/: add.rs  edit.rs  find.rs  list.rs  mod.rs  mv.rs  rm.rs  show.rs
tests/: add_test.rs  edit_test.rs  find_test.rs  list_test.rs  mv_test.rs  rm_test.rs  show_test.rs
tests/common/: mod.rs
