[package]
name = "invy"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for tracking home inventory with hierarchical containers"

[[bin]]
name = "invy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
directories = "5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
